--- a/Project_ThietKeGiaoDienAndroid/res/layout/activity_lab1.xml
+++ b/Project_ThietKeGiaoDienAndroid/res/layout/activity_lab1.xml
@@ -6,9 +6,23 @@
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="BAI TAP LAB 1"
         android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <WebView
+        android:id="@+id/fileWebView"
+        android:layout_width="match_parent"
+        android:layout_height="374dp"
+        android:layout_weight="0.88" />
+
+    <Button
+        android:id="@+id/btnAboutme"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical|center"
+        android:text="About Me" />
 
 </LinearLayout>
