--- a/Project_ThietKeGiaoDienAndroid/res/layout/activity_lab4.xml
+++ b/Project_ThietKeGiaoDienAndroid/res/layout/activity_lab4.xml
@@ -20,7 +20,7 @@
                 android:text="Column 1" />
 
             <Button
-                android:id="@+id/button1"
+                android:id="@+id/btnAboutme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Column 2" />
