--- a/Project_ThietKeGiaoDienAndroid/res/layout/activity_lab5.xml
+++ b/Project_ThietKeGiaoDienAndroid/res/layout/activity_lab5.xml
@@ -11,4 +11,32 @@
         android:text="Bai tap Lab 5"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
+    <Button
+        android:id="@+id/Button01"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/buttonselector"
+        android:text="Button" />
+
+    <Button
+        android:id="@+id/Button02"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/buttonselector"
+        android:text="Button" />
+
+    <Button
+        android:id="@+id/Button03"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/buttonselector"
+        android:text="Button" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/buttonselector"
+        android:text="Button" />
+
 </LinearLayout>
