--- a/Project_ThietKeGiaoDienAndroid/res/layout/activity_lab5.xml
+++ b/Project_ThietKeGiaoDienAndroid/res/layout/activity_lab5.xml
@@ -2,12 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background6"
     android:orientation="vertical" >
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingBottom="20dp"
         android:text="Bai tap Lab 5"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
